style.css
/* ... */
nav a {
  color: white;
  text-decoration: none;
  padding: 0 1rem;
}

nav a:hover {
  text-decoration: underline;
}

.desktop-menu {
  display: flex;
  align-items: center;
}

.desktop-menu > .current-page {
  font-weight: bold;
}

#open-mobile-menu {
  background-image: url("/images/icons/menu.svg");
  border-radius: 0.5rem;
}

#open-mobile-search,
#open-desktop-search {
  background-image: url("/images/icons/search.svg");
  background-size: 50%;
  border-radius: 0.5rem;
}

.desktop-menu button {
  background-color: transparent;
  background-position: center;
  background-size: 25%;
  background-repeat: no-repeat;
  height: 50px;
  width: 50px;
  border: none;
  transition: ease-in-out 0.3s;
}

.desktop-menu button:hover {
  cursor: pointer;
  background-color: #002954;
}

.mobile-buttons {
  display: none;
}

/* Search bar */

#search-bar {
  height: 5rem;
  background: #000;
  justify-content: center;
  align-items: center;
}

#cludo-search-form {
  width: 100%;
  display: flex;
  justify-content: center;
}

#search-bar input {
  width: 50%;
  height: 2.5rem;
  padding: 0 1rem;
}

#search-bar button {
  height: 2.5rem;
  width: 2.5rem;
  background: url("/images/icons/search.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-color: #751f7c;
  border: none;
  border-radius: 0 5px 5px 0;
}

#search-bar button:hover {
  background-color: #002954;
  cursor: pointer;
}

/* Mobile menu */

#mobile-menu {
  background-color: #751f7c;
  flex-wrap: wrap;
}

#mobile-menu a {
  color: white;
  width: 100%;
  padding: 1rem 3rem;
  text-decoration: none;
}

#mobile-menu a:hover {
  text-decoration: underline;
}

/* Banner ad */
.banner-ad {
  margin: 2rem 0;
  display: flex;
  justify-content: center;
  width: 100%;
}

.banner-ad img {
  max-width: 100%;
}

/* Page intro */
.page-intro {
  background-color: #fff;
  margin-top: 0.5rem;
  padding: 3rem 4rem;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
}

.page-intro h1 {
  margin: 0;
  padding: 0;
  padding-bottom: 1rem;
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
}

/* Homepage posts */
main {
  width: 66%;
  padding: 0 3rem;
  float: left;
  margin-bottom: 2rem;
}

article {
  display: flex;
  height: 350px;
  margin-bottom: 2rem;
  background-color: white;
  border: 1px solid #dddcdc;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
}

article > div {
  height: 100%;
  width: 50%;
  padding: 1rem;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-clip: content-box;
}

article .tags {
  margin-top: 2rem;
}

.tags {
  display: inline-block;
}

.tags a:hover,
.tags a:focus {
  transition: ease-in-out 0.3s;
  background-color: #0079fa;
}

.tag-icon {
  background-image: url(/images/icons/tag.svg);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  width: 20px;
  height: 20px;
  display: inline-block;
  vertical-align: middle;
}

.tags > a {
  text-decoration: none;
  color: #fff;
  background-color: #751f7c;
  border-radius: 3px;
  padding: 3px;
}

.meta-info {
  margin-bottom: 0.5rem;
}

.meta-info > a {
  color: #757575;
  margin-right: 10px;
}

.meta-info > a > img {
  margin-right: 0.5rem;
}

.meta-info > a:hover {
  color: #751f7c;
}

article a {
  color: #000;
  text-decoration: none;
}

article h4 {
  font-size: 24px;
  margin: 1rem 0;
  text-decoration: underline;
}

article h4:hover {
  color: #751f7c;
}

/* Pagination */

.pages {
  display: flex;
  justify-content: center;
  margin-bottom: 5rem;
}

.pages a {
  background-color: #fff;
  color: #757575;
  font-size: 1.2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  margin: 0 0.5rem;
  text-decoration: none;
  border-radius: 5px;
  transition: ease-in-out 0.3s;
}

.pages a:hover,
.pages .current-page {
  background-color: #751f7c;
  color: #fff;
}

/* Aside */
aside {
  width: 33%;
  padding-right: 5rem;
  float: right;
}

aside div {
  background-color: white;
  margin-bottom: 3rem;
}

aside div img {
  display: block;
  width: 100%;
}

.aside-content {
  padding: 1rem;
}

.aside-h6-wrapper {
  display: block;
  border-bottom: 2px solid #751f7c;
}

aside h6 {
  background-color: #751f7c;
  color: white;
  font-size: 18px;
  line-height: 40px;
  font-weight: 600;
  margin: 0;
  padding: 0 8px 0 15px;
  position: relative;
  width: auto;
  height: 40px;
  display: inline-block;
}

aside ul {
  padding: 1rem;
  display: flex;
  flex-wrap: wrap;
  list-style: none;
}

aside ul li {
  margin-bottom: 20px;
}

aside ul li a {
  padding: 5px;
  border-radius: 3px;
  color: #751f7c;
  background-color: #f3eeee;
  text-decoration: none;
  margin-right: 1rem;
  transition: ease-in-out 0.3s;
}

aside ul li a:hover {
  color: white;
  background-color: #751f7c;
}

aside h6::before {
  width: 0;
  position: absolute;
  right: -30px;
  top: 0px;
  height: 0;
  border-style: solid;
  border-width: 40px 0 0px 30px;
  content: "";
  border-color: transparent transparent transparent #751f7c;
}

.sign-up {
  background: transparent;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.sign-up a {
  text-decoration: none;
}

.notif-signup,
.email-signup {
  display: block;
  min-width: 350px;
  margin-bottom: 1rem;
  padding: 1rem;
  border: 3px solid #751f7c;
  border-radius: 0.5rem;
  color: #751f7c;
  text-decoration: none;
  text-align: center;
  background: #fff;
  font-size: 1rem;
  font-family: "Work Sans", sans-serif;
}

.notif-signup-icon,
.email-signup-icon {
  display: inline-block;
  background-image: url(/images/icons/bell-purple.svg);
  width: 25px;
  height: 25px;
  margin-left: 1rem;
  vertical-align: middle;
  font-size: 1rem !important;
  background-repeat: no-repeat;
}

.email-signup-icon {
  background-image: url(/images/icons/mail-purple.svg);
}
/* ... */

